@@ -134,6 +134,15 @@ class AccountsController < ApplicationController
     end
   end
 
+  # POST /leads/auto_complete/query                                        AJAX
+  #----------------------------------------------------------------------------
+  def auto_complete
+    @query = params[:auto_complete_query]
+    @auto_complete = Account.my(@current_user).search(@query).limit(10)
+    session[:auto_complete] = :accounts
+    render :template => "common/auto_complete", :layout => nil
+  end
+
   private
   #----------------------------------------------------------------------------
   def get_accounts(options = { :page => nil, :query => nil })
