@@ -162,6 +162,15 @@ class OpportunitiesController < ApplicationController
     end
   end
 
+  # POST /leads/auto_complete/query                                        AJAX
+  #----------------------------------------------------------------------------
+  def auto_complete
+    @query = params[:auto_complete_query]
+    @auto_complete = Opportunity.my(@current_user).search(@query).limit(10)
+    session[:auto_complete] = :opportunities
+    render :template => "common/auto_complete", :layout => nil
+  end
+
   # Ajax request to filter out list of opportunities.                      AJAX
   #----------------------------------------------------------------------------
   def filter
