@@ -62,9 +62,10 @@
     a
       :color white
       :padding 0px 0px 4px 0px
+      &.selected
+        :color navy
       &:hover
         :background steelblue
-        :color navy
     input
       :margin 2px 0px 0px 0px
 #tabs
