@@ -4,6 +4,14 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Mon, May 25, 2009
+---------------------------------------------------------------------
+- Implemented jumpbox (called "Quick Find").
+
+Sun, May 24, 2009
+---------------------------------------------------------------------
+- More work on jumpbox.
+
 Sat, May 23, 2009
 ---------------------------------------------------------------------
 - Restructured application's JavaScript and added crm.Popup class.
